--- a/index.html
+++ b/index.html
@@ -60,13 +60,16 @@
             <br>
             <br>
             <h6>DEPORTE FAVORITO</h6>
+            <center>
             <img src="futbol.webp" alt="Imajen de futbol" class="futbolimg" width="400"> 
+            </center>
                 <div class="Infofutbol">
                     <p>Mi deporte favorito es el futbol Lo practico</p>
                     <p>los fines de semana </p>
                     <p>Mi jugador favorito es Lionel Messi</p>
                     <p>Y mi equipo favorito es el psg</p>
                 </div>
+                <button class="btn succes">MAS INFORMACION</button>
         </div>
     <footer>
         <p>Derechos Reservados @2024 </p>
