--- a/index.html
+++ b/index.html
@@ -69,7 +69,12 @@
                     <p>Mi jugador favorito es Lionel Messi</p>
                     <p>Y mi equipo favorito es el psg</p>
                 </div>
-                <button class="btn succes">MAS INFORMACION</button>
+                <center>
+                <a href="https://messi.com/">
+                    <button>MAS INFORMACION</button>
+                </a>
+
+                </center>
         </div>
     <footer>
         <p>Derechos Reservados @2024 </p>
