--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <p>Y mi equipo favorito es el psg</p>
                 </div>
                 <center>
-                <a href="https://messi.com/">
-                    <button>MAS INFORMACION</button>
+                <a href="informacion.html" class="btn btn-light border border-dark mt-3" style="color: black; background-color: white;">
+                Modificación Bootstrap
                 </a>
 
                 </center>
