--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <p>Y mi equipo favorito es el psg</p>
                 </div>
                 <center>
-                <a href="informacion.html" class="btn btn-light border border-dark mt-3" style="color: black; background-color: white;">
+                <a href="Informacion.html" class="btn btn-light border border-dark mt-3" style="color: black; background-color: white;">
                 Modificación Bootstrap
                 </a>
 
