--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <center>
                 <a href="Informacion.html" class="btn btn-light border border-dark mt-3" style="color: black; background-color: white;">
-                Modificación Bootstrap
+                MAS INFORMACION
                 </a>
 
                 </center>
