--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
                     <p> SEMAFORO </p>
                 </div>
                  
-                <a href="http://127.0.0.1:5500/semaforo.html">
-                    <button>Ir a Semaforo</button>
+                <a href="semaforo.html" class="btn btn-light border border-dark mt-3" style="color: white; background-color: #4caf50;"> IR A SEMAFORO
                 </a>
                 </center>
             </div>
