--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
                 </a>
                 <button class="btn btn-success mt-3 ms-2" onclick="showMessage()">Aceptar</button>
                 <button class="btn btn-success mt-3 ms-2" onclick="cambiarContenido()">cambiar</button>
+                    <a href="comidas.html" class="btn btn-light border border-dark mt-3" style="color: white; background-color: #4caf50;"> IR COMIDAS
+                </a>
 
                 </center>
         </div>
